Reorganize files and add new content: Move existing files to others directory, add new test files, homework files, and mine directory content

--- a/others/form.html
+++ b/others/form.html
@@ -42,11 +42,12 @@
 
    <br>
    <br>
-       <button type=" submit">  Login
+       <button type="submit">  Login
         </button> &nbsp;     &nbsp;   &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp; 
      
 
-         <button type="cancel"> Cancel</button>
+         <button type="button">Cancel</button>
+
 
     </fieldset>
     </form>
