--- a/others/tableform.html
+++ b/others/tableform.html
@@ -8,25 +8,22 @@
 <body>
     <table border="1px" cellspacing="0"> 
        <thead>
-        <th colspan="2"> Net Texable Income</th>
-
-        <th rowspan="2"> Tax Rate </th>
-       
+        <tr>
+            <th colspan="2"> Net Texable Income</th>
+            <th rowspan="2"> Tax Rate </th>
+        </tr>
+        <tr>
+            <th>Over</th>
+            <th>But not over</th>
+        </tr>
        </thead>
 
-
        <tbody>
-         <tr>  <td> Over </td>
-        <td> But not over</td>
-
-
-
-    <tr>
-            <td>   </td>
-            <td> 250,000</td>
+         <tr>
+            <td></td>
+            <td >250,000</td>
             <td>0%</td>
          </tr>
-        </tr>
 
 
 
