--- a/others/table2.html
+++ b/others/table2.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<!-- saved from url=(0036)http://127.0.0.1:5500/tableform.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>table</title>
